fixed whitespace issue

--- a/meetus.css
+++ b/meetus.css
@@ -104,7 +104,7 @@ footer h4 {
     }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 999px) {
     section {
         flex-direction: column;
         align-items: center;
@@ -114,7 +114,7 @@ footer h4 {
         width: 90%;
     }
 }
-@media (max-width: 400px) {
+@media (max-width: 500px) {
     section {
         width: 100%;
     }
